# follow-up

./: .gitignore  COMMAND_WRAPPER_APPROACH.md  HITL_APPROACH.md  PYTHON_TOOLING.md  README.md
docs/superpowers/specs/: 2026-06-28-xilinx-command-wrapper-design.md
hitl-access-demo/: Dockerfile  README.md  compose.yaml  entrypoint.sh  hil-session  hil.conf
hitl-sim-demo/: .gitignore  ARCHITECTURE.md  HITL_SIMULATOR_SUMMARY.md  README.md  pyproject.toml
hitl-sim-demo/ci/: github-actions.yml
hitl-sim-demo/robot/: HitlLibrary.py  actuator_hitl.robot
hitl-sim-demo/src/hitl_sim/: __init__.py  actuator.py  cli.py  controller.py  faults.py  instrumentation.py  loop.py  messages.py  scenarios.py  simulator.py  transport.py
hitl-sim-demo/tests/: test_actuator.py  test_can_transport.py  test_faults.py  test_integration.py  test_monitor.py
wrapper-demo/: Cargo.toml  README.md  build.rs  commands.toml  config.example.toml  install.sh  publish-to-nexus.sh
wrapper-demo/mocks/: mock_lmstat.sh  mock_vivado.sh
wrapper-demo/src/: binary.rs  commands.rs  config.rs  license.rs  limiter.rs  main.rs  runner.rs  update.rs
