[project]
name = "hitl-sim"
version = "0.1.0"
description = "Reference per-developer HIL/HITL simulator: fin-actuator plant model + bus-level fault injection + instrumentation. Runs in pure software (CI) and deploys unchanged to a Raspberry Pi bench."
requires-python = ">=3.11"
# Runtime is intentionally stdlib-only so any developer can run the demo with
# zero installs and so the same code runs on a resource-constrained Raspberry Pi.
# Real-hardware transports add deps behind extras (see below).
dependencies = []

[project.optional-dependencies]
# Installed only on the Raspberry Pi bench, not needed for the software demo.
canbus = ["python-can>=4.3"]
serial = ["pyserial>=3.5"]

[project.scripts]
hitl-sim = "hitl_sim.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "robotframework>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hitl_sim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
