[package]
name = "xwrap"
version = "0.1.0"
edition = "2021"
description = "Rust command wrapper for a licensed executable: build-time recipes, cache, env, concurrency cap, lmstat gate, Nexus self-update"

[[bin]]
name = "xwrap"
path = "src/main.rs"

[dependencies]
clap = "4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
figment = { version = "0.10", features = ["toml", "env"] }
ureq = "2"
sha2 = "0.10"
fs2 = "0.4"
semver = "1"
dirs = "5"
anyhow = "1"

[build-dependencies]
toml = "0.8"

[profile.release]
strip = true
lto = true
opt-level = "z"
